--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,11 +13,13 @@
 
 
 <form action="/UserLogin" method="post">
-  UserId:  <input type="text" name="id">
-  Username: <input type="text" name="name">
-  Password: <input type="password" name="password">
+  UserId:  <input type="text" name="id">   <br>
+  Username: <input type="text" name="name">  <br>
+  Password: <input type="password" name="password">  <br>
   <input type="submit" value="Submit">
 </form>
+
+<p class="l" th:text="${message}"></p>
 
 </body>
 </html>
