--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>用户登陆</title>
+<title>用户注册</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="" />
@@ -24,32 +24,28 @@
 				</div>
 			</div>
 			<div class="w3_info">
-				<h2>登陆您的账户</h2>
-						<form action="/UserLogin" method="post" >
-							<div class="input-group">
-								<span><i class="fa fa-user" aria-hidden="true"></i></span>
-								<input type="text" name="id" placeholder="用户ID" required="">
-							</div>
-							<div class="input-group">
-								<span><i class="fa fa-user" aria-hidden="true"></i></span>
-								<input type="text" name="name" placeholder="用户名" required="">
-							</div>
-						<div class="input-group">
-							<span><i class="fa fa-lock" aria-hidden="true"></i></span>
-							<input type="Password" name="password" placeholder="Password" required="">
-						</div>
+				<h2>注册您的账户</h2>
+				<form action="/UserRegister" method="post" >
+					<div class="input-group">
+						<span><i class="fa fa-user" aria-hidden="true"></i></span>
+						<input type="text" name="id" placeholder="用户ID" required="">
+					</div>
+					<div class="input-group">
+						<span><i class="fa fa-user" aria-hidden="true"></i></span>
+						<input type="text" name="name" placeholder="用户名" required="">
+					</div>
+					<div class="input-group">
+						<span><i class="fa fa-lock" aria-hidden="true"></i></span>
+						<input type="Password" name="password" placeholder="Password" required="">
+					</div>
 
 
-							<p color="#FF0000" th:text="${LoginErrorMessage}" >   </p>
-							<button class="btn btn-danger btn-block" type="submit" >登陆</button >
-					</form>
-				<form action="/Register" method="post" >
-					<button class="btn btn-danger btn-block" type="submit"  name="registered" value="register" >注册</button >
+					<p color="#FF0000" th:text="${RegisterErrorMessage}" >   </p>
+					<button class="btn btn-danger btn-block" type="submit" >注册</button >
 				</form>
-
-
-
-
+				<form action="/index" method="post" >
+					<button class="btn btn-danger btn-block" type="submit"  name="index" value="" >返回登陆界面</button >
+				</form>
 			</div>
 			<div class="clear"></div>
 			</div>
