Revise some html pages.

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>用户注册</title>
+<title>注册-工业APP分级系统</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="" />
@@ -11,15 +11,15 @@
 </head>
 <body>
 <div class="signupform">
-<h1>工业APP分类分级测评平台</h1>
+<h1>工业APP分级系统</h1>
 	<div class="container">
 		
 		<div class="agile_info">
 			<div class="w3l_form">
 				<div class="left_grid_info">
 					<h3>欢迎</h3>
-					<h4>ss.</h4>
-					<p> Nam eleifend velit eget dolor vestibulum ornare. Vestibulum est nulla, fermentum eget euismod et, tincidunt at dui. Nulla tellus nisl, semper id justo vel, rutrum finibus risus. Cras vel auctor odio.</p>
+					<h4>使用工业APP分级系统，为您的工业APP加上权威认证</h4>
+					<h4>现在就开始吧</h4>
 					
 				</div>
 			</div>
