--- a/src/main/resources/templates/AppInfoList.html
+++ b/src/main/resources/templates/AppInfoList.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 
 
-    <title>用户主界面</title>
+    <title>申请列表-工业APP分级系统</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">工业APP分类分级测评平台</a>
+          <a class="navbar-brand" href="#">工业APP分级系统</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
